deleted product added
